Overflow Mobile Fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap');
 
+.all {
+    overflow-x: hidden !important;
+}
+
 body {
     margin: 0px;
     font-family: 'Poppins', sans-serif;
